--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "inversify": "^7.10.4",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
